--- a/_sass/_migrated-main.scss
+++ b/_sass/_migrated-main.scss
@@ -31335,9 +31335,7 @@ body.view-in-course .content-wrapper#content {
   background-color: #ebebeb;
   padding-bottom: 1em;
 }
-#content .course-content,
-#content .forum-nav,
-#content .discussion-column {
+#content .course-content {
   background: white;
   border: 1px solid #ccc;
   border-radius: 2px;
@@ -31351,742 +31349,6 @@ body.view-in-course .content-wrapper#content {
 }
 #content #course-content.course-content {
   width: 100%;
-}
-#content .discussion-column {
-  padding: 20px;
-}
-#content .discussion-column div.response-count {
-  margin-right: 10px;
-}
-#content .discussion-column span.label {
-  color: #222;
-}
-#content .discussion-column .home-header span.label {
-  display: none;
-}
-#content .discussion-column .forum-new-post-form .post-topic-button:hover,
-#content .discussion-column .forum-new-post-form .post-topic-button:focus,
-#content .discussion-column .edit-post-form .post-topic-button:hover,
-#content .discussion-column .edit-post-form .post-topic-button:focus {
-  border: 1px solid #aaa;
-  background-image: -webkit-linear-gradient(top, #fcfcfc, #f6f6f6);
-  background-image: linear-gradient(to bottom, #fcfcfc, #f6f6f6);
-}
-.container div.info-wrapper section.updates > ol > li h2,
-section.outside-app div.info-wrapper section.updates > ol > li h2,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  h2,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  h2,
-.view-profile .badge-set-display div.info-wrapper section.updates > ol > li h2,
-.container
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .container
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  p,
-section.outside-app
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  section.outside-app
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  p,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  p,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  p,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  p,
-.home
-  > header
-  .container.grey
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  .title
-  > .heading-group
-  p,
-.container div.info-wrapper section.updates > ol > li section.outside-app h1,
-section.outside-app div.info-wrapper section.updates > ol > li h1,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  section.outside-app
-  h1,
-section.outside-app
-  .view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  h1,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  section.outside-app
-  h1,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  > ol
-  > li
-  section.outside-app
-  h1,
-.container div.info-wrapper section.updates > ol article h2,
-section.outside-app div.info-wrapper section.updates > ol article h2,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  h2,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  h2,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  h2,
-.container
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .container
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  p,
-section.outside-app
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  section.outside-app
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  p,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  p,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  p,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  p,
-.home
-  > header
-  .container.grey
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  .title
-  > .heading-group
-  p,
-.container div.info-wrapper section.updates > ol article section.outside-app h1,
-section.outside-app div.info-wrapper section.updates > ol article h1,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  section.outside-app
-  h1,
-section.outside-app
-  .view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  h1,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  section.outside-app
-  h1,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  > ol
-  article
-  section.outside-app
-  h1,
-.container div.info-wrapper section.updates section > li h2,
-section.outside-app div.info-wrapper section.updates section > li h2,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  h2,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  h2,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  h2,
-.container
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .container
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  p,
-section.outside-app
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  section.outside-app
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  p,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  p,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  p,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  p,
-.home
-  > header
-  .container.grey
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  .title
-  > .heading-group
-  p,
-.container div.info-wrapper section.updates section > li section.outside-app h1,
-section.outside-app div.info-wrapper section.updates section > li h1,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  section.outside-app
-  h1,
-section.outside-app
-  .view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  h1,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  section.outside-app
-  h1,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  section
-  > li
-  section.outside-app
-  h1,
-.container div.info-wrapper section.updates section article h2,
-section.outside-app div.info-wrapper section.updates section article h2,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  section
-  article
-  h2,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  section
-  article
-  h2,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  section
-  article
-  h2,
-.container
-  div.info-wrapper
-  section.updates
-  section
-  article
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .container
-  div.info-wrapper
-  section.updates
-  section
-  article
-  p,
-section.outside-app
-  div.info-wrapper
-  section.updates
-  section
-  article
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  section.outside-app
-  div.info-wrapper
-  section.updates
-  section
-  article
-  p,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  section
-  article
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  section
-  article
-  p,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  section
-  article
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  section
-  article
-  p,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  section
-  article
-  .home
-  > header
-  .title
-  > .heading-group
-  p,
-.home
-  > header
-  .title
-  > .heading-group
-  .view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  section
-  article
-  p,
-.home
-  > header
-  .container.grey
-  div.info-wrapper
-  section.updates
-  section
-  article
-  .title
-  > .heading-group
-  p,
-.container div.info-wrapper section.updates section.outside-app article h1,
-section.outside-app div.info-wrapper section.updates section article h1,
-.view-profile
-  .profile-self
-  .wrapper-profile-field-account-privacy
-  .u-field-account_privacy
-  div.info-wrapper
-  section.updates
-  section.outside-app
-  article
-  h1,
-.view-profile
-  .wrapper-profile-sections
-  div.info-wrapper
-  section.updates
-  section.outside-app
-  article
-  h1,
-.view-profile
-  .badge-set-display
-  div.info-wrapper
-  section.updates
-  section.outside-app
-  article
-  h1 {
-  background: none;
-  padding-left: 0;
 }
 .content-wrapper .wrapper-course-material .course-material {
   max-width: inherit;
