--- a/_sass/_migrated-vendor.scss
+++ b/_sass/_migrated-vendor.scss
@@ -176,18 +176,18 @@
 // .fa-music:before {
 //   content: "\f001";
 // }
-// .fa-search:before {
-//   content: "\f002";
-// }
+.fa-search:before {
+  content: "\f002";
+}
 // .fa-envelope-o:before {
 //   content: "\f003";
 // }
 // .fa-heart:before {
 //   content: "\f004";
 // }
-// .fa-star:before {
-//   content: "\f005";
-// }
+.fa-star:before {
+  content: "\f005";
+}
 // .fa-star-o:before {
 //   content: "\f006";
 // }
@@ -273,9 +273,9 @@
 // .fa-lock:before {
 //   content: "\f023";
 // }
-// .fa-flag:before {
-//   content: "\f024";
-// }
+.fa-flag:before {
+  content: "\f024";
+}
 // .fa-headphones:before {
 //   content: "\f025";
 // }
@@ -470,9 +470,9 @@
 // .fa-compress:before {
 //   content: "\f066";
 // }
-// .fa-plus:before {
-//   content: "\f067";
-// }
+.fa-plus:before {
+  content: "\f067";
+}
 // .fa-minus:before {
 //   content: "\f068";
 // }
@@ -777,20 +777,20 @@
 //   content: "\f0db";
 // }
 // .fa-unsorted:before,
-// .fa-sort:before {
-//   content: "\f0dc";
-// }
-// .fa-sort-down:before,
-// .fa-sort-desc:before {
-//   content: "\f0dd";
-// }
-// .fa-sort-up:before,
-// .fa-sort-asc:before {
-//   content: "\f0de";
-// }
-// .fa-envelope:before {
-//   content: "\f0e0";
-// }
+.fa-sort:before {
+  content: "\f0dc";
+}
+.fa-sort-down:before,
+.fa-sort-desc:before {
+  content: "\f0dd";
+}
+.fa-sort-up:before,
+.fa-sort-asc:before {
+  content: "\f0de";
+}
+.fa-envelope:before {
+  content: "\f0e0";
+}
 // .fa-linkedin:before {
 //   content: "\f0e1";
 // }
