--- a/_sass/_migrated-forum.scss
+++ b/_sass/_migrated-forum.scss
@@ -152,6 +152,34 @@
   background: #e7e7e7;
 }
 
+.forum-nav-browse-menu {
+  padding-left: 0;
+  margin: 0;
+  font-size: 0.875rem;
+  overflow-y: scroll;
+  list-style: none;
+  max-height: 600px;
+
+  li {
+    display: list-item;
+    margin-bottom: 0;
+
+    .forum-nav-browse-title {
+      text-align: left;
+      display: block;
+      width: 100%;
+      border: 0;
+      border-radius: 0;
+      border-bottom: 1px solid #d9d9d9;
+      padding: 10px;
+      background: transparent;
+      box-shadow: none;
+      background-image: none;
+      cursor: pointer;
+    }
+  }
+}
+
 .forum-nav-browse-filter {
   position: relative;
   border-bottom: 1px solid #d9d9d9;
@@ -177,9 +205,7 @@ TODO: migrate discussion CSS out of theme
   .view-discussion-home .helpgrid-row .row-item-full,
   .view-discussion-home .helpgrid-row td.row-item,
   span.label.label-settings,
-  ul.forum-nav-browse-menu li,
-  ul.forum-nav-browse menu li.forum-nav-browse-menu-item,
-  ul.forum-nav-browse menu li.forum-nav-browse-menu-item span {
+  ul.forum-nav-browse-menu li {
     font-size: 14px;
   }
 
