--- a/_sass/_migrated-forum.scss
+++ b/_sass/_migrated-forum.scss
@@ -203,7 +203,7 @@
   border-bottom: none;
   border-radius: 3px;
   border: 1px solid #d9d9d9;
-  box-shadow: 0 1px 3px rgb(0 0 0 / 15%);
+  box-shadow: 0 1px 3px rgba(0 0 0 0.15);
 }
 
 .view-discussion-home .helpgrid-row {
